tests/cn/cnfunction_mismatched_args3.error.c.expected
return code: 1
tests/cn/cnfunction_mismatched_args3.error.c:6:5: warning: experimental keyword 'cn_function' (use of experimental features is discouraged)
/*@ cn_function bw_or; @*/
    ^~~~~~~~~~~ 
tests/cn/cnfunction_mismatched_args3.error.c:5:1: error: mismatched arguments: (u32 y) and (i32 y)
int c_bw_or(int x, int y)
~~~~^~~~~~~~~~~~~~~~~~~~~ 
